--- a/css/main.css
+++ b/css/main.css
@@ -1,12 +1,12 @@
 @font-face {
   font-family: 'Calibre-Regular';
-  src: url("fonts/Calibre-Regular.woff"); }
+  src: url("../fonts/Calibre-Regular.woff"); }
 @font-face {
   font-family: 'Calibre-Semibold';
-  src: url("fonts/Calibre-Semibold.woff"); }
+  src: url("../fonts/Calibre-Semibold.woff"); }
 @font-face {
   font-family: 'Calibre-Bold';
-  src: url("fonts/Calibre-Bold.woff"); }
+  src: url("../fonts/Calibre-Bold.woff"); }
 .main-container {
   max-width: 100%;
   margin-right: 2rem;
