--- a/css/main.scss
+++ b/css/main.scss
@@ -1,16 +1,16 @@
 @font-face {
   font-family: 'Calibre-Regular';
-  src: url('fonts/Calibre-Regular.woff');
+  src: url('../fonts/Calibre-Regular.woff');
 }
 
 @font-face {
   font-family: 'Calibre-Semibold';
-  src: url('fonts/Calibre-Semibold.woff');
+  src: url('../fonts/Calibre-Semibold.woff');
 }
 
 @font-face {
   font-family: 'Calibre-Bold';
-  src: url('fonts/Calibre-Bold.woff');
+  src: url('../fonts/Calibre-Bold.woff');
 }
 
 // CSS for the main containers
