The first hookup

--- a/css/main.css
+++ b/css/main.css
@@ -158,13 +158,13 @@
 
 @font-face {
   font-family: 'Calibre-Regular';
-  src: url("../fonts/Calibre-Regular.woff"); }
+  src: url("//js.six.ph/fonts/Calibre-Regular.woff"); }
 @font-face {
   font-family: 'Calibre-Semibold';
-  src: url("../fonts/Calibre-Semibold.woff"); }
+  src: url("//js.six.ph/fonts/Calibre-Semibold.woff"); }
 @font-face {
   font-family: 'Calibre-Bold';
-  src: url("../fonts/Calibre-Bold.woff"); }
+  src: url("//js.six.ph/fonts/Calibre-Bold.woff"); }
 .main-container {
   max-width: 100%;
   margin-right: 2rem;
