--- a/css/main.css
+++ b/css/main.css
@@ -218,11 +218,6 @@ select {
   -webkit-appearance: none;
   -webkit-border-radius: 0px;
   background-color: white !important;
-  /* Select Arrow styling CSS from http://stackoverflow.com/questions/22153080/how-do-i-change-the-select-box-arrow */
-  background: linear-gradient(45deg, transparent 50%, #4279FF 50%), linear-gradient(135deg, #4279FF 50%, transparent 50%);
-  background-position: calc(100% - 12px) calc(0.4rem + 2px), calc(100% - 8px) calc(0.4rem + 2px);
-  background-size: 4px 4px, 4px 4px;
-  background-repeat: no-repeat;
   border-radius: 0;
   margin: 0;
   -webkit-box-sizing: border-box;
@@ -230,6 +225,13 @@ select {
   box-sizing: border-box;
   -webkit-appearance: none;
   -moz-appearance: none; }
+
+  /* Select Arrow styling CSS from http://stackoverflow.com/questions/22153080/how-do-i-change-the-select-box-arrow */
+select:not(:disabled) {
+  background: linear-gradient(45deg, transparent 50%, #4279FF 50%), linear-gradient(135deg, #4279FF 50%, transparent 50%);
+  background-position: calc(100% - 12px) calc(0.4rem + 2px), calc(100% - 8px) calc(0.4rem + 2px);
+  background-size: 4px 4px, 4px 4px;
+  background-repeat: no-repeat; }
 
 input {
   outline: 0; }
