--- a/css/main.css
+++ b/css/main.css
@@ -203,13 +203,13 @@ q:before, q:after {
 
 @font-face {
   font-family: 'Calibre-Regular';
-  src: url("//js.six.ph/fonts/Calibre-Regular.woff"); }
+  src: url("../fonts/Calibre-Regular.woff"); }
 @font-face {
   font-family: 'Calibre-Semibold';
-  src: url("//js.six.ph/fonts/Calibre-Semibold.woff"); }
+  src: url("../fonts/Calibre-Semibold.woff"); }
 @font-face {
   font-family: 'Calibre-Bold';
-  src: url("//js.six.ph/fonts/Calibre-Bold.woff"); }
+  src: url("../fonts/Calibre-Bold.woff"); }
 @font-face {
   font-family: 'Icons';
   src: url("../fonts/icons.eot");
@@ -220,6 +220,7 @@ q:before, q:after {
   text-decoration: inherit;
   text-transform: none; }
 .main-container {
+  position: relative;
   max-width: 100%;
   margin-right: 2rem;
   margin-left: 2rem; }
@@ -229,6 +230,12 @@ q:before, q:after {
   float: left;
   display: inline-block; }
 
+@media (max-width: 1000px) {
+  .side-panel-container {
+    display: none !important; }
+
+  .main-data-container {
+    width: 100%; } }
 .side-panel-container {
   margin-left: 1%;
   width: 27%;
@@ -315,47 +322,64 @@ a {
 .headerfix {
   overflow: visible; }
 
-.ui.fluid.search.selection.dropdown {
-  margin: 0rem;
-  padding: 0rem;
-  border-width: 1px;
-  border-style: solid;
-  border-color: #a6a6a6;
-  min-height: 0px;
-  border-radius: 0rem; }
+.rm-margin-bottom {
+  margin-bottom: 0px !important; }
 
-.default.text {
-  margin: 0rem;
-  padding: 0.3rem 0rem 0rem 0.1rem;
-  font-size: 0.8rem;
-  color: black;
-  font-family: "Calibre-Regular", sans-serif; }
+.Select {
+  height: 100% !important; }
 
-.dropdown.icon {
-  padding: 0.1rem 0.2rem 0rem 0rem !important;
-  color: #4279FF !important; }
+.Select.is-disabled {
+  border: 1px solid #a6a6a6 !important; }
 
-input.search {
+.Select-control {
+  border-radius: 0rem !important;
+  font-size: 13px !important;
   margin: 0rem !important;
-  padding: 0.2rem 0rem 0.05rem 0.1rem !important; }
+  padding: 0rem !important;
+  border: 0rem !important;
+  height: 13px !important; }
 
-.message {
-  font-size: 0.8rem !important;
-  padding: 0.2rem 0rem 0.05rem 0.1rem !important; }
+.Select-placeholder {
+  height: 13px !important;
+  line-height: 13px !important;
+  padding-top: 0.4rem !important;
+  padding-left: 0.3rem !important;
+  color: black !important;
+  overflow: visible !important; }
 
-.ui.search.dropdown > .text {
-  font-size: 0.8rem !important;
-  padding: 0.2rem 0rem 0.05rem 0.1rem !important; }
+.Select-input {
+  height: 13px !important;
+  padding-left: 0.3rem !important;
+  padding-top: 0.15rem !important; }
 
-.ui.selection.dropdown .menu > .item.selected {
-  background-color: #4279FF;
-  color: white; }
+.Select-input > input {
+  padding: 0.45rem 0rem 0rem 0rem !important;
+  height: 13px !important;
+  box-sizing: border-box !important;
+  width: 80% !important;
+  max-width: 100% !important; }
 
-.ui.selection.dropdown .menu > .item {
+span.Select-arrow-zone {
+  padding: 0.45rem 0rem 0rem 0rem !important; }
+
+.Select-arrow {
+  border-color: #4279FF transparent transparent !important; }
+
+.Select-value, .Select-value-label {
+  line-height: 13px !important; }
+
+.Select-value {
+  padding-top: 0.4rem !important;
+  padding-left: 0.3rem !important; }
+
+.Select-option {
+  padding: 0.4rem 0.3rem 0rem 0.4rem !important;
   margin: 0rem !important;
-  padding: 0.3rem 0rem 0rem 0.1rem !important;
-  font-size: 0.8rem !important;
-  font-family: "Calibre-Regular", sans-serif !important; }
+  font-size: 13px !important; }
+
+.Select-clear {
+  height: 5px !important;
+  padding-top: 0.2rem !important; }
 
 .error-dialog {
   width: auto;
@@ -474,8 +498,12 @@ input.search {
   margin-top: 0rem;
   margin-left: 2rem;
   font-size: 1.2rem;
-  padding-top: 0.75rem;
+  padding-top: 1rem;
   padding-bottom: 0.75rem; }
+
+.my-academics-link-wrapper {
+  margin-top: 1.8rem;
+  margin-bottom: 0.7rem; }
 
 .my-academics-link {
   text-decoration: none; }
@@ -694,7 +722,7 @@ input.search {
 
 .sc-class-item {
   padding: 0.75rem;
-  margin: 0.5rem 0;
+  margin: 0.5rem 0rem;
   border-radius: 0.25rem;
   background-color: white; }
 
@@ -771,23 +799,25 @@ input.search {
   padding-bottom: 0.5rem; }
 
 .add-class-CCN {
-  width: 25%; }
+  width: 25%;
+  float: left; }
 
 .add-class-section {
   width: 71%;
-  margin-left: 2%; }
+  float: right;
+  display: inline-block !important; }
 
 .add-class-form-row {
+  height: 1.5rem;
   margin-bottom: 0.35rem; }
 
 .add-class-department {
-  width: 47% !important;
-  display: inline-block !important; }
+  width: 49% !important;
+  float: left; }
 
 .add-class-course-number {
-  display: inline-block !important;
-  width: 48% !important;
-  margin-left: 2% !important; }
+  float: right;
+  width: 49% !important; }
 
 .add-class-class-name {
   width: 60% !important; }
@@ -799,7 +829,7 @@ input.search {
 .add-class-waitlist-status {
   display: inline-block;
   width: 37%;
-  margin-left: 1%;
+  margin-left: 2%;
   font-size: 0.8rem; }
 
 .add-class-waitlist-row {
@@ -814,7 +844,6 @@ input.search {
   margin-right: 1.2rem; }
 
 .add-class-submit-button {
-  margin-top: 0.8rem;
   padding: 0.5rem 0.8rem;
   font-size: 0.8rem; }
 
