--- a/css/main.css
+++ b/css/main.css
@@ -203,17 +203,17 @@ q:before, q:after {
 
 @font-face {
   font-family: 'Calibre-Regular';
-  src: url("../fonts/Calibre-Regular.woff"); }
+  src: url("//js.six.ph/fonts/Calibre-Regular.woff"); }
 @font-face {
   font-family: 'Calibre-Semibold';
-  src: url("../fonts/Calibre-Semibold.woff"); }
+  src: url("//js.six.ph/fonts/Calibre-Semibold.woff"); }
 @font-face {
   font-family: 'Calibre-Bold';
-  src: url("../fonts/Calibre-Bold.woff"); }
+  src: url("//js.six.ph/fonts/Calibre-Bold.woff"); }
 @font-face {
   font-family: 'Icons';
-  src: url("../fonts/icons.eot");
-  src: url("../fonts/icons.eot?#iefix") format("embedded-opentype"), url("../fonts/icons.woff") format("woff"), url("../fonts/icons.ttf") format("truetype"), url("../fonts/icons.svg#icons") format("svg");
+  src: url("//js.six.ph/fonts/icons.eot");
+  src: url("//js.six.ph/fonts/icons.eot?#iefix") format("embedded-opentype"), url("//js.six.ph/fonts/icons.woff") format("woff"), url("//js.six.ph/fonts/icons.ttf") format("truetype"), url("//js.six.ph/fonts/icons.svg#icons") format("svg");
   font-style: normal;
   font-weight: normal;
   font-variant: normal;
